# doubaoWord2Anki

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
examples/: basic_import.py  mdx_dictionary_demo.py  youdao_dictionary_demo.py
src/: __init__.py  anki_exporter.py  cache_manager.py  cli.py  config.py  http_client.py  transformer.py
src/core/: __init__.py  interfaces.py  models.py
src/doubaoWord2Anki/: __init__.py  anki_exporter.py  config.py  http_client.py  transformer.py
src/exporters/: anki_exporter.py
src/fetchers/: http.py
src/middleware/: dictionary_enhancement.py  field_mapping.py  pipeline.py
src/services/: dictionary_base.py  dictionary_factory.py  mdx_dictionary.py  renren_dictionary.py  youdao_dictionary.py
tests/: test_http_fetcher.py
