[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doubaoWord2Anki"
version = "0.1.0"
description = "Import JSON data to ANKI with enhanced dictionary support"
authors = [{name = "pony"}]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "genanki>=0.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=0.21.0",
    "loguru>=0.6.0",
    "aiohttp>=3.8.0",
    "backoff>=2.2.0",
    "aiofiles>=23.1.0",
    "pyyaml>=6.0.0"
]

[project.scripts]
anki-importer = "doubaoWord2Anki.cli:main"
